# hungary_2022_gerrymandering

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  REPRODUCIBILITY.md  policy-brief.md  pyproject.toml
.github/workflows/: ci-heavy.yml  ci.yml
data/processed/: README.md
data/processed/_smoke_ensemble_map_m01/: focal_oevk_assignments.parquet  precincts_smoke_m01.parquet
data/processed/manifests/: precinct_votes_etl.json  precincts_etl.json  precincts_void_hex_baseline_admin_etl.json  (+3 more)
data/raw/: README.md
docs/: alarm-methodology.md  data-model.md  master-plan.md  methodology.md  oevk-constraints.md  partisan-metrics.md  references.md  software-decisions.md  void-gap-verification.md
docs/runs/: main.md
r/redist/: DESCRIPTION  README.md  install_deps_user.R  run_smc.R
scripts/: build_precinct_layer.py  build_precinct_votes.py  fix_admin_shell_nvi_mapping.py  join_votes_to_precinct_layer.py  map_adjacency.py  map_ensemble_draw.py  run_county_ensemble_hex_fuzzy.sh  run_main_analysis.sh  run_pilot_pipeline.py  verify_efficiency_gap_forensic.py  verify_void_gap_metrics.py
src/hungary_ge/: __init__.py  config.py
tests/: test_adjacency.py  test_constraints.py  test_county_allocation.py  test_county_reports.py  test_county_sample.py  test_diagnostics.py  test_electoral_etl.py  test_ensemble_persistence.py  test_gaps.py  test_gaps_hex.py  test_metrics_balance.py  test_metrics_policy.py  test_national_adjacency_merge.py  test_national_rollup.py  test_partisan_metric_policy_args.py  test_partisan_metrics.py  test_pilot_pipeline.py  test_pipeline_progress.py  test_plan_assignments.py  test_policy_figures_efficiency_gap_consistency.py  test_policy_figures_manifest.py  test_policy_figures_selection.py  test_policy_figures_stage_args.py  test_precinct_geometry_hub_drop.py  test_precinct_geometry_qa.py  test_precinct_geometry_repair.py  test_problem_binding.py  test_redist_csv.py  test_redist_export.py  test_redist_integration.py  test_smoke_imports.py  test_szavkor_etl.py
(+3269 files in other folders)
