[project]
name = "hungary-ge"
version = "0.1.0"
description = "Ensemble analysis of Hungarian OEVK districts (2022) using ALARM-style simulation methodology"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4,<5",
    "ruff>=0.15.8",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
extend-select = [
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.format]
quote-style = "double"
