[project]
name = "hungary-ge"
version = "0.1.0"
description = "Ensemble analysis of Hungarian OEVK districts (2022) using ALARM-style simulation methodology"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.0",
    "pyogrio>=0.9.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "shapely>=2.0.0",
    "libpysal>=4.9.0",
    "pyarrow>=15.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
viz = [
    "folium>=0.15.0",
]

[project.scripts]
hungary-ge-pipeline = "hungary_ge.pipeline.runner:main_entry"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4,<5",
    "pytest>=8.0.0",
    "ruff>=0.15.8",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
extend-select = [
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-m",
    "not requires_r and not requires_data and not heavy",
]
markers = [
    "requires_r: needs Rscript and a working redist install (see tests/test_redist_integration.py)",
    "requires_data: needs large or private datasets under data/ (reserved)",
    "heavy: slow or high-memory tests (reserved)",
]
